# MyAutomation

Currency converter project/: Helper.py  Main_Process.py  main.py  programVariables.py  pyproject.toml
poetryProject/: Class1.py  Class1_HW.py  Class2.py  Class2_HW.py  Class3.py  Class3_HW.py  Class4.py  Class4_HW.py  Class5.py  Class5_HW.py  Useful_Functions.py  pyproject.toml
